<resources>
    <string name="register">Cadastro</string>
    <string name="projeto">Projeto Android Básico</string>
    <string name="login">Login</string>
    <string name="welcome">The future is in your hands.</string>
    <string name="editText_name">Digite seu nome</string>
    <string name="editText_cpf">Digite seu CPF</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_foward">Continuar</string>
    <string name="editText_loginEmail">Email</string>
    <string name="editText_password">Senha</string>
    <string name="textView_login">O seu login é: </string>
    <string name="textView_password">A sua senha é:</string>
    <string name="textView_register">O seu nome é:</string>
    <string name="textView_cpf">O seu CPF é:</string>
    <string name="textView_title">Título do livro</string>
    <string name="textView_subtitle">Nome do autor do livro</string>
    <string name="editText_email">Digite seu Email</string>
    <string name="editText_year">Digite o ano em que nasceu</string>
    <string name="textView_titleNews"> Título da notícia</string>
    <string name="textView_description"> Descrição da notícia</string>
</resources>
