<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/charcoal">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <EditText
        android:id="@+id/editText_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_login"
        android:layout_marginTop="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_password"
        android:layout_marginBottom="200dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="number"
        android:textColor="@color/white"
        />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">


            <Button
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_cancel"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/button_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_foward"
                android:layout_weight="1"/>



        </LinearLayout>
    </LinearLayout>


</RelativeLayout>